AE-208:  Confirm dialog for delete operators

--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -645,6 +645,9 @@
       "delete-error": "Energiatodistuksen poistaminen epäonnistui"
     }
   },
+  "confirm": {
+    "you-want-to-delete": "Oletko varma, että haluat poistaa?"
+  },
   "drop-or-click-file": "Lisää tiedosto raahaamalla tai selaa tiedostoja",
   "file_upload_error_multiple_files": "Liikaa tiedostoja. Lisää yksi tiedosto kerrallaan.",
   "country-not-found": "Virheellinen maa"
