AE-208:  Yritys table fix

--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -666,5 +666,8 @@
   },
   "drop-or-click-file": "Lisää tiedosto raahaamalla tai selaa tiedostoja",
   "file_upload_error_multiple_files": "Liikaa tiedostoja. Lisää yksi tiedosto kerrallaan.",
-  "country-not-found": "Virheellinen maa"
+  "country-not-found": "Virheellinen maa",
+  "table": {
+    "actions": "Toiminnot"
+  }
 }
