AE-148: Add foundations for korvaus

--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -130,6 +130,7 @@
   },
   "energiatodistus": {
     "title": "Energiatodistus",
+    "korvaavuus": "Energiatodistuksen korvaavuus",
     "tila": {
       "draft": "Luonnos",
       "in-signing": "Allekirjoitus",
