AE-251: laatijat search

--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -92,6 +92,7 @@
     }
   },
   "laatija": {
+    "laatija": "Laatija",
     "lisaa-laatijat": "Lisää laatijat",
     "henkilotunnus": "Henkilötunnus",
     "katuosoite": "Katuosoite",
