--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -141,8 +141,7 @@
     "tila": "Tila",
     "tilat": {
       "0": "Pätevyys voimassa",
-      "1": "Pätevyys vanhentunut",
-      "2": "Laatimiskielto"
+      "1": "Pätevyys vanhentunut"
     }
   },
   "energiatodistus": {
