AE-381: link to energiatodistukset

--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -139,6 +139,7 @@
   "laatijahaku": {
     "title": "Laatijahaku",
     "kunta": "Kunta",
+    "energiatodistukset": "ET:t",
     "results": "Tuloksia {count} KPL",
     "kaikki": "Kaikki",
     "voimassaolo": "Voimassaolo",
