--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -147,7 +147,7 @@
     "tilat": {
       "0": "Pätevyys voimassa",
       "1": "Ei kirjautunut",
-      "2": "Pätevyys peruttu / Laatimiskiellossaa",
+      "2": "Pätevyys peruttu / Laatimiskiellossa",
       "3": "Pätevyys päättynyt"
     }
   },
