AE-923: restrict to delete attachments by laatija when energiatodistus is in valvonta state

--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -1023,6 +1023,7 @@
     "liitteet": {
       "title": "Liitteet",
       "empty": "Energiatodistuksella ei ole liitteitä.",
+      "poista_disabled": "Et voi poistaa liitettä energiatodistukselta joka ei ole valvonnassa.",
       "liite": {
         "createtime": "Lisätty",
         "nimi": "Tiedosto / Linkki",
