AE-1269: Fix label-context usage for search criteria

--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -466,6 +466,7 @@
       },
       "ikkunat": {
         "header": "Ikkunat ilmansuunnittain",
+        "label-context": "$unused",
         "kohtisuora": "kohtisuora",
         "arvo": "arvo",
         "labels": {
@@ -639,6 +640,7 @@
       },
       "sis-kuorma": {
         "header": "Sisäiset lämpökuormat eri käyttöasteilla",
+        "label-context": "$unused",
         "kayttoaste": "Käyttöaste",
         "lampokuorma": "Lämpökuorma",
         "labels": {
