--- a/src/language/sv.json
+++ b/src/language/sv.json
@@ -447,6 +447,7 @@
       },
       "ikkunat": {
         "header": "Fönster enligt väderstreck",
+        "label-context": "$unused",
         "kohtisuora": "rät vinkel",
         "arvo": "värde",
         "labels": {
@@ -620,6 +621,7 @@
       },
       "sis-kuorma": {
         "header": "Interna värmelaster enligt användningsgrad",
+        "label-context": "$unused",
         "kayttoaste": "Användningsgrad",
         "lampokuorma": "Värmelast",
         "labels": {
@@ -725,7 +727,7 @@
       },
       "tekniset-jarjestelmat": {
         "header": "Energi som förbrukas av husets tekniska system",
-        "label-context": "$unused",
+        "label-context": "Tekniset järjestelmät SV?",
         "sahko": "El",
         "lampo": "Värme",
         "kaukojaahdytys": "Fjärrkyla",
