--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -388,7 +388,7 @@
       "kiinteistotunnus": "Kiinteistötunnus",
       "rakennusosa": "Rakennuksen osa",
       "valmistumisvuosi": "Rakennuksen valmistumisvuosi",
-      "kayttotarkoitus": "Käyttötarkoitusluokat",
+      "kayttotarkoitus": "Käyttötarkoitusluokka",
       "kayttotarkoitusluokka": "Käyttötarkoitusluokka",
       "alakayttotarkoitusluokka": "Alakäyttötarkoitusluokka",
       "julkinen-rakennus": "Julkinen rakennus",
