--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -1471,7 +1471,9 @@
         "cancel": "Peruuta",
         "delete": "Poista",
         "new-kohde": "Uusi käytönvalvonta",
-        "after-save-notice": "Voit lisätä liitteitä ja osapuolia tallentamisen jälkeen.",
+        "title": "Käytönvalvonta",
+        "after-save-notice": "Voit lisätä liitteitä ja osapuolia tallentamisen jälkeen",
+        "no-attachments": "Ei liitteitä",
         "messages": {
           "not-found": "Kohdetta ei löydy.",
           "load-error": "Kohteen tietojen haku epäonnistui.",
@@ -1482,6 +1484,43 @@
           "add-success": "Kohde lisätty.",
           "add-error": "Kohteen lisääminen epäonnistui.",
           "validation-error": "Tiedoissa on virhe. Tarkista kohteen tiedot ennen lähettämistä."
+        }
+      },
+      "osapuolet": {
+        "uusi-henkilo": "Uusi henkilo",
+        "uusi-yritys": "Uusi henkilo",
+        "nimi": "Nimi",
+        "etunimi": "Etunimi",
+        "sukunimi": "Sukunimi",
+        "henkilotunnus": "Henkilötunnus",
+        "y-tunnus": "Y-tunnus",
+        "rooli-id": "Rooli",
+        "rooli-description": "Roolin kuvaus",
+        "email": "Sähköposti",
+        "puhelin": "Puhelinnumero",
+        "vastaanottajan-tarkenne": "Vastaanottajan tarkenne tai C/O",
+        "jakeluosoite": "Katuosoite tai postilokero",
+        "postinumero": "Postinumero",
+        "postitoimipaikka": "Postitoimipaikka",
+        "maa": "Maa",
+        "toimitustapa-id": "Toimitustapa",
+        "warning-toimitustapa-suomifi-henkilo": "Kun toimitustapa on suomi.fi, tulee henkilötunnus ja osoitetiedot olla täytettynä",
+        "warning-toimitustapa-suomifi-yritys": "Kun toimitustapa on suomi.fi, tulee Y-tunnus ja osoitetiedot olla täytettynä",
+        "warning-toimitustapa-email": "Kun toimitustapa on sahköposti, tulee sahköpostiosoitteen olla täytettynä",
+        "save": "Tallenna",
+        "cancel": "Peru muutokset",
+        "delete": "Poista",
+        "messages": {
+          "not-found": "Osapuolta ei ole olemassa.",
+          "load-error": "Osapuolen tietojen haku epäonnistui.",
+          "save-success": "Osapuolen muutokset tallennettu.",
+          "save-error": "Osapuolen tallennus epäonnistui.",
+          "publish-success": "Osapuoli on lähetetty.",
+          "publish-error": "Osapuolen lähetys epäonnistui.",
+          "preview-error": "Osapuolen esikatselu epäonnistui.",
+          "add-success": "Osapuoli lisätty.",
+          "add-error": "Osapuolen lisääminen epäonnistui.",
+          "validation-error": "Tiedoissa on virhe. Tarkista osapuolen tiedot ennen lähettämistä."
         }
       },
       "valvonta": {
