--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -1371,11 +1371,13 @@
           "response-title": "Valvontamuistio",
           "response-description": "ARA pyytää vastausta {deadline-date} mennessä.",
           "draft-info": "Voit jatkaa valvontamuistion tekemistä myöhemmin",
-          "tiedoksi-title": "Lähetä valvontamuistio tiedoksi",
-          "tiedoksi-description": "Jos sähköpostiosoitetta ei ole syötetty, tulee valvontamuistio lähettää manuaalisesti",
-          "tiedoksi-name": "Vastaanottaja",
-          "tiedoksi-email": "Sähköpostiosoite",
-          "tiedoksi-add": "Lisää vastaanottaja"
+          "tiedoksi": {
+            "title": "Lähetä valvontamuistio tiedoksi",
+            "description": "Jos sähköpostiosoitetta ei ole syötetty, tulee valvontamuistio lähettää manuaalisesti",
+            "name": "Vastaanottaja",
+            "email": "Sähköpostiosoite",
+            "add": "Lisää vastaanottaja"
+          }
         },
         "audit-reply": {
           "title": "Vastaus valvontamuistioon",
