AE:1921: Implement käskypäätös / valitusaika umpeutunut toimenpidetype
- Only comment field
- The type has no deadline

--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -1968,6 +1968,12 @@
           "description": "Kommentti",
           "publish-button": "Luo toimenpide"
         },
+        "decision-order-deadline-reached": {
+          "title": "Käskypäätös / valitusaika umpeutunut",
+          "info": "Valitusajan umpeuduttua tiedustellaan HaO:lta sähköpostitse, onko käskypäätöksestä valitettu.",
+          "description": "Kommentti",
+          "publish-button": "Luo toimenpide"
+        },
         "penalty-decision-hearing-letter": {
           "title": "Sakkopäätös / kuulemiskirje",
           "info": "Rakennuksen omistajilla on viimeinen mahdollisuus perustella, miksi energiatodistusta ei ole hankittu.",
