AE-1962: Fix UI texts

--- a/src/language/fi.json
+++ b/src/language/fi.json
@@ -1985,7 +1985,7 @@
         },
         "penalty-decision-notice-first-mailing": {
           "title": "Sakkopäätös tiedoksianto / (ensimmäinen postitus)",
-          "info": "Sakkopäätös postitetaan liitteineen kirjeitse kirjaamon kautta saantitodistuksella.",
+          "info": "Sakkopäätös postitetaan liitteineen (mukana myös sakkolappu) kirjeitse kirjaamon kautta saantitodistuksella.",
           "description": "Kommentti",
           "publish-button": "Luo toimenpide"
         },
